@@ -1,23 +1,36 @@
 package org.baaleos.systems.ubuntu;
 
 import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.lang.ProcessBuilder.Redirect;
+import java.util.Scanner;
 
 public class Command {
 
-	public static String exec(String command) throws IOException, InterruptedException{
-		Process cmdProc = Runtime.getRuntime().exec(command);
-		StringBuilder sb = new StringBuilder();
-		cmdProc.waitFor();
+	public static String exec(String command, String strQuery) throws IOException, InterruptedException{
+		ProcessBuilder builder = new ProcessBuilder(command);
+        String out = "";
+        Process process = builder.start();
 
-	    BufferedReader reader = 
-	         new BufferedReader(new InputStreamReader(cmdProc.getInputStream()));
+        OutputStream stdin = process.getOutputStream(); // <- Eh?
+        InputStream stdout = process.getInputStream();
 
-	    String line = "";			
-	    while ((line = reader.readLine())!= null) {
-	    	sb.append(line + "\n");
-	    }
-		return sb.toString();
+        BufferedReader reader = new BufferedReader(new InputStreamReader(stdout));
+        BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(stdin));
+
+        writer.write(strQuery);
+        writer.flush();
+        writer.close();
+
+        Scanner scanner = new Scanner(stdout);
+        while (scanner.hasNextLine()) {
+        	out += scanner.nextLine();
+        }
+		return out;
 	}
 }
